--- a/CongressServer/package.json
+++ b/CongressServer/package.json
@@ -7,14 +7,14 @@
     "start": "nodemon ./bin/www"
   },
   "dependencies": {
-    "body-parser": "~1.17.1",
-    "cookie-parser": "~1.4.3",
-    "debug": "~2.6.3",
-    "express": "~4.15.2",
+    "body-parser": "^1.17.2",
+    "cookie-parser": "^1.4.3",
+    "debug": "^2.6.8",
+    "express": "^4.15.3",
     "mongoose": "^4.10.4",
-    "morgan": "~1.8.1",
-    "pug": "~2.0.0-beta11",
-    "serve-favicon": "~2.4.2"
+    "morgan": "^1.8.2",
+    "pug": "^2.0.0-rc.1",
+    "serve-favicon": "^2.4.3"
   },
   "devDependencies": {
     "grunt": "~1.0.1",
